[Refactor] Replaced masked Java exceptions for specific OpenMarkov exception. [Refactor] Removed manually setting index of enum constants, as it led to throwing exceptions on unreachable code (Said unreachable code now doesn't need to exist, eliminating said unreachable exceptions). [Test] Added a tag to prevent certain tests from being run in parallel with OpenMarkov's run configurations. [Exception, Test] Most of the exceptions thrown by calling Constructor#newInstance(Object...) are no longer reachable, as they are verified by the test InheritanceFiltersAreMet. [Bugfix] Partially fixed bug from issue 533 (Cloning issues in class Node). [Refactor] Code quality to reduce exceptions.